fix active sidenav issue not showing in safari

--- a/components/general/table/styles.module.scss
+++ b/components/general/table/styles.module.scss
@@ -39,7 +39,6 @@
     color: #282828;
     padding: 0.8rem 2rem;
 
-    .download_btn,
     .toggle_btn {
       display: none;
     }
