--- a/components/layouts/dashboard/styles.module.scss
+++ b/components/layouts/dashboard/styles.module.scss
@@ -5,14 +5,14 @@
     margin-top: 4rem;
     margin-left: 5rem;
     width: 100%;
-    @media screen and (max-width: 550px) {
+    @media screen and (max-width: 767px) {
       margin-left: 0;
     }
   }
 }
 
 //mobile view
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 767px) {
   .container {
     &__element {
       margin: 5rem 0;
